Change jdk version from 21 to 17 supported by jenkins and finish with stage maven in jenkins